# smssh

./: Cargo.toml  LICENSE  README.md
src/: aws.rs  cli.rs  config.rs  main.rs
src/commands/: config.rs  connect.rs  mod.rs
