[package]
name = "smssh"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.0"
aws-sdk-secretsmanager = "1.66.0"
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.46"
color-eyre = "0.6.3"
crossterm = "0.28.1"
dirs = "6.0.0"
nix = { version = "0.29.0", features = ["process"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
signal-hook = "0.3.17"
tempfile = "3.19.0"
tokio = "1.44.1"
